--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "let-me-sleep"
-version = "0.1.1"
+version = "0.1.2"
 description = "Detect applications preventing Windows from sleeping and show in system tray"
 readme = "README.md"
 requires-python = ">=3.13"
@@ -14,5 +14,5 @@ dependencies = [
 [dependency-groups]
 dev = [
     "packaging>=26.0",
-    "pyinstaller>=6.18.0",
+    "nuitka>=2.8.6",
 ]
